<?xml version="1.0" encoding="utf-8"?>
<!-- 
 JapaneseDictionary - an JMDict browser for Android
 Copyright (C) 2013 Jaroslav Klech
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Japanese dictionary</string>
    <string name="title_activity_main">Japanese dictionary</string>
    
    <!-- ParserService -->
    <string name="dictionary_download_title">Downloading japanese dictionary</string>
    <string name="dictionary_download_in_progress">Download in progress</string>
    <string name="dictionary_kanji_download_title">Downloading kanji dictionary</string>
    <string name="dictionary_tatoeba_download_title">Downloading tatoeba dictionary</string>

    <string name="dictionary_download_complete">Download complete</string>
    <string name="dictionary_parsing_in_progress">Parsing file in progress</string>
    <plurals name="dictionary_parsing_in_progress_time_left">
        <item quantity="one">1 minute left</item>
        <item quantity="other">%1$d minutes left</item>
    </plurals>
    <string name="dictionary_download_interrupted">Download interrupted</string>
    <string name="dictionary_not_enough_space">Not enough free space. At least 100 Mb is required.</string>


    <!-- MainActivity -->
    <string name="parsing_downloaded_dictionary">Parsing downloaded dictionaries</string>
    <string name="no_dictionary_found">No dictionary found</string>
    <string name="nothing_found">Nothing found</string>
    <string name="download_dictionary_question">Do you want to download dictionary? \nInternet connection required.\nSize: 35 MB</string>
    <string name="download">Download</string>
    <string name="storno">Cancel</string>
    <string name="save">Save</string>
    <string name="currently_downloading_dictionary">Currently downloading dictionary please wait</string>
    <string name="internet_connection_failed_title">Internet connection failed</string>
    <string name="internet_connection_failed_message">Internet connecton is not available</string>
    <string name="external_storrage_failed_title">External storrage unavailable</string>
    <string name="external_storrage_failed_message">External storrage is not available</string>  
    <string name="search_translation">Search translation</string>
    <string name="updating_in_progress">Updating dictionary in progress, please wait</string>
    <string name="unknown_last_update">Last update unknown</string>
    <string name="last_update">Last update: </string>
    <string name="actionbar_search">Search</string>
    <string name="last_seen">Last seen</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>


    <!-- Menu -->
    <string name="anki_card">Add translation to AnkiDroid</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_favorite_activity">Show favorites</string>
    <string name="menu_note">Add note</string>
    <string name="menu_setting">Settings</string>


    <!-- Favorite -->
    <string name="favorite_title">Favorite</string>

    <!-- History -->
    <string name="history_title">History</string>

    <!-- Languages -->
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_dutch">Dutch</string>
    <string name="language_german">German</string>
    <string name="language_russian">Russian</string>
    <!--  Preferences -->
    <string name="preferences_language_setting">Language settings</string>
    <string name="preferences_english">Translate English</string>
    <string name="preferences_french">Translate French</string>
    <string name="preferences_dutch">Translate Dutch</string>
    <string name="preferences_german">Translate German</string>
    <string name="preferences_russian">Translate Russian</string>
    <string name="preferences_dictionary_info">Dictionary info</string>
 	<string name="preferences_update_dictionary">Update dictionary</string>
 	<string name="preferences_no_dictionary_info">No dictionary found</string>
 	<string name="preferences">Preferences</string>
    <string name="preferences_search_setting">Search settings</string>
    <string name="preferences_search_common">Search only commonly-used words</string>
    <string name="preferences_search_common_title">Common words</string>
    <string name="preferences_search_dictionary_form">Transform predicates to dictionary form</string>
    <string name="preferences_search_dictionary_form_title">Dictionary form</string>

   <!-- Tabs -->
   <string name="search_exact">Exact</string>
   <string name="search_beginning">Begins</string>
   <string name="search_middle">Contains</string>
   <string name="search_end">Ends</string>
   
   
   <!-- Display Translation -->
   <string name="translation_select_translation">Select translation</string>
   <string name="translation_title">Entry detail</string>
   <string name="translation_romaji">Romaji</string>
   <string name="translation_alternative">Alternative</string>
   <string name="translation_translation">Translation</string>
   <string name="translation_kanji">Kanji components</string>
   <string name="translation_kanji_no_meaning">No known meaning in selected language</string>
   <string name="translation_note">Note</string>
   <string name="anki_not_found">AnkiDroid application is not installed. Install AnkiDroid now?</string>
    <string name="anki_required">AnkiDroid is required</string>


   <!-- Display character info -->
   <string name="character_unknown_character">Unknown character</string>
   <string name="character_title">Character detail</string>
   <string name="kanjidict_radical_text">Radical</string>
   <string name="kanjidict_grade_text">Grade</string>   
   <string name="kanjidict_stroke_count_text">Stroke count</string>   
   <string name="kanjidict_dictionaries">Dictionary references</string>  
   <string name="kanjidict_skip_text">SKIP</string>  
   <string name="kanjidict_nanori_text">Nanori</string>  
   <string name="kanjidict_meanings">Meanings</string>  
   <string name="kanjidict_onyomi_text">Onyomi</string>  
   <string name="kanjidict_kunyomi_text">Kunyomi</string>  
   
   <!--About -->
   <string name="about_title">About</string>
   <string name="about_unknown">unknown</string>
   <string name="about_version">Version:  </string>
   <string name="about_creator">Created by: </string>
   <string name="about_dictionary">This application uses the JMDict and KANJIDIC2 dictionary files. These files are the property of the Electronic Dictionary Research and Development Group, and are used in conformance with the Group\'s licence. </string>

   <!--voice search -->
   <string name="searchable_ja">ja</string>
   <string name="searchable_hint">romaji/かな/漢字</string>
    <string name="dictionary_download_complete_text">Dictionaries downloaded successfully</string>
    <string name="detail_tatoeba">Example</string>
    <string name="character_unknown_sentence">Unknown sentence</string>
    <string name="dictionary_kanjivg_download_title">Donwloading kanji strokes dictionary - KanjiVG</string>
    <string name="kanjidict_kanjivg">Character strokes</string>

</resources>
