<?xml version="1.0" encoding="utf-8"?>
<!-- 
 JapaneseDictionary - an JMDict browser for Android
 Copyright (C) 2013 Jaroslav Klech
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:japanesedictionary="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/actionbar_search"
        android:orderInCategory="1"
        japanesedictionary:actionViewClass="android.support.v7.widget.SearchView"
        japanesedictionary:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/favorite"
        android:enabled="false"
        android:icon="@drawable/rating_not_important"
        android:title="@string/menu_favorite"
        android:visible="false"
        japanesedictionary:showAsAction="ifRoom"/>
    <item
        android:id="@+id/ab_note"
        android:enabled="false"
        android:icon="@drawable/note"
        android:title="@string/menu_note"
        android:visible="false"
        japanesedictionary:showAsAction="ifRoom"/>
    <item
        android:id="@+id/ab_anki"
        android:enabled="false"
        android:icon="@drawable/content_new"
        android:title="@string/anki_card"
        android:visible="false"
        japanesedictionary:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_setting"
        japanesedictionary:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about_title"
        japanesedictionary:showAsAction="never"/>
</menu>