<?xml version="1.0" encoding="utf-8"?><!--
 JapaneseDictionary - an JMDict browser for Android
 Copyright (C) 2013 Jaroslav Klech
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/paddingLeft"
    android:paddingRight="@dimen/paddingLeft"
    android:paddingTop="@dimen/paddingTop"
    android:paddingBottom="@dimen/paddingTop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/translation_select"
            android:visibility="gone"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translation_select_translation" />

        <LinearLayout
            android:id="@+id/translation_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/translation_reading_writing_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/paddingLeftSmall"
                android:paddingLeft="@dimen/paddingLeftSmall"
                android:paddingRight="@dimen/paddingLeftSmall">



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTopSmall"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/secondary_text_light"
                    android:text="@string/translation_romaji"
                    android:layout_marginStart="@dimen/paddingLeftSmall"
                    android:layout_marginLeft="@dimen/paddingLeftSmall" />

                <TextView
                    android:id="@+id/translation_romaji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/primary_text_light"
                    android:textIsSelectable="true"
                    android:layout_marginStart="@dimen/paddingLeftSmall"
                    android:layout_marginLeft="@dimen/paddingLeftSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/translation_alternative_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTopSmall"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/secondary_text_light"
                    android:text="@string/translation_alternative"
                    android:layout_marginStart="@dimen/paddingLeftSmall"
                    android:layout_marginLeft="@dimen/paddingLeftSmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/translation_alternative"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/primary_text_light"
                    android:layout_marginStart="@dimen/paddingLeftSmall"
                    android:layout_marginLeft="@dimen/paddingLeftSmall"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/translation_note_container"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/paddingTopSmall"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="68dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/secondary_text_light"
                        android:text="@string/translation_note"
                        android:layout_marginStart="@dimen/paddingLeftSmall"
                        android:layout_marginLeft="@dimen/paddingLeftSmall" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/translation_note_text"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/primary_text_light"
                        android:layout_marginStart="@dimen/paddingLeftSmall"
                        android:layout_marginLeft="@dimen/paddingLeftSmall"
                        android:textIsSelectable="true" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:listSeparatorTextViewStyle"
                android:textColor="@android:color/primary_text_light"
                android:text="@string/translation_translation" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/translation_translation_container" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/translation_kanji_container"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:listSeparatorTextViewStyle"
                    android:textColor="@android:color/primary_text_light"
                    android:text="@string/translation_kanji" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/translation_kanji_meanings_container" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/translation_tatoeba_container"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:listSeparatorTextViewStyle"
                    android:textColor="@android:color/primary_text_light"
                    android:text="@string/detail_tatoeba" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_margin="16dp"
                    android:id="@+id/detail_example_sentences_progress_bar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/detail_example_sentences_container" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>