<?xml version="1.0" encoding="utf-8"?>	
<!-- 
 JapaneseDictionary - an JMDict browser for Android
 Copyright (C) 2013 Jaroslav Klech
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            />
        <TextView
            android:id="@+id/about_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:layout_weight="1"
            android:padding="3dp"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_creator"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            />
        <TextView
            android:id="@+id/about_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:layout_weight="1"
            android:padding="3dp"
            />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/about_acknowledgment"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_dictionary"
            android:linksClickable="true"
            />
    </LinearLayout>
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
              android:layout_width="240dp"
              android:layout_height="match_parent"
              android:layout_gravity="start"
              android:choiceMode="singleChoice"
              android:divider="@android:color/transparent"
              android:dividerHeight="0dp"
              android:background="#111"/>
</LinearLayout>